[package]
name = "edge-auto-scaler"
version = "0.1.0"
authors = ["peaceman <nixalio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
act-zero = { version = "0.3", features = ["tokio"] }
log = "0.4.11"
env_logger = "0.7.1"
tokio = { version = "0.2.22", features = ["full"] }
async-trait = "0.1.41"
futures = "0.3.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
anyhow = "1.0.33"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1.21"
tracing-subscriber = "0.2.14"
tracing-bunyan-formatter = "0.1.6"
tracing-futures = "0.2.4"
tracing-opentelemetry = "0.8.0"
opentelemetry-jaeger = "0.7.0"
opentelemetry = "0.8.0"
strum = { version = "0.19", features = ["derive"] }
strum_macros = "0.19"
rand = "0.7.3"