[package]
name = "edge-auto-scaler"
version = "0.1.0"
authors = ["peaceman <nixalio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
act-zero = { version = "0.3", features = ["tokio"] }
log = "0.4.11"
env_logger = "0.7.1"
tokio = { version = "0.2.22", features = ["full"] }
async-trait = "0.1.41"
futures = "0.3.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
anyhow = "1.0.33"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1.21"
tracing-subscriber = "0.2.14"
tracing-bunyan-formatter = "0.1.6"
tracing-futures = { version =  "0.2.4", features = ["futures-03"]}
tracing-opentelemetry = "0.8.0"
opentelemetry-jaeger = "0.7.0"
opentelemetry = "0.8.0"
strum = { version = "0.19", features = ["derive"] }
strum_macros = "0.19"
rand = "0.7.3"
tonic = { version = "0.3", features = ["transport", "tls"] }
prost = "0.6"
http = "0.2"
async-stream = "0.3.0"
humantime-serde = "1.0"
reqwest = { version = "0.10", features = ["json"] }
base64 = "0.13"
serde_json = "1.0"
thiserror = "1.0"
url = "2.2"
libflate = "1.0"
base64-stream = "1.2"

[build-dependencies]
tonic-build = "0.3"